@@ -1,5 +1,8 @@
 2017-12-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/unix/sysv/linux/aarch64/sigcontextinfo.h (ucontext_get_pc):
+	New function.
+
 	* sysdeps/unix/sysv/linux/powerpc/syscall_cancel.S: New file.
 	* sysdeps/unix/sysv/linux/powerpc/sysdep-cancel.h
 	(__pthread_get_pc): New function.
